Rectangle grid container alignment issues

--- a/client/public/style/App.sass
+++ b/client/public/style/App.sass
@@ -77,13 +77,14 @@
   padding-top: 3.5%
   padding-bottom: 6%
 
-.rectangleR
-  margin-left: 32%
-  margin-bottom: 7%
+.rectangleInfoContainer
+  display: grid
+  align-content: end
 
-.rectangleL 
-  margin-left: 2%
-  margin-bottom: 7%
+
+
+
+    
 
 
 
