--- a/client/public/style/template/Screenshot.sass
+++ b/client/public/style/template/Screenshot.sass
@@ -1,16 +1,24 @@
 .scrnShotBox
     height: 100%
-    background-color: black
+    background: rgba(0, 0, 0, 0.38)
     padding-bottom: 4%
     padding-top: 2%
     text-align: center
 
+
+.ssbTitleContainer
+    display: grid
+    justify-content: center
+    
 .ssbTitle
     color: orange
     font-size: 50px
+    margin-right: 30%
 
 .screenshotContainer
-    margin-top: 3%   
+    margin-top: 3% 
+    position: relative  
+
 
 .centerImage    
   position: absolute
@@ -21,8 +29,7 @@
   right: 0
   left: 0
   z-index: 3
-
-.leftInImage
+.left2Image
     position: absolute
     z-index: 2
     margin-left: 4%
@@ -30,7 +37,7 @@
     height: 320px
     margin-top: 2%  
     width: 640px
-.leftOutImage
+.left1Image
     position: absolute 
     z-index: 1
     margin-bottom: 80%
@@ -38,15 +45,14 @@
     margin-left: 9% 
     width: 480px
     height: 240px
-
-.rightInImage
+.right2Image
     position: absolute   
     z-index: 2  
     margin-top: 2%
     margin-left: 45%
     height: 320px
     width: 640px
-.rightOutImage                  
+.right1Image                  
     position: absolute
     z-index: 1
     margin-top: 4%
@@ -54,22 +60,22 @@
     width: 480px
     height: 240px
 
-.bruh
-    margin-top: 40%
-    display: grid 
-    grid-template-columns: max-content 2% 2% 2% 2% 2% auto max-content
-    margin-left: auto
-    margin-right: auto
-    right: 0
-    left: 0
-    
-.dotIndic
-    margin-top: 40%
-    margin-left: 40%
 
+.sliderContainer
+    display: grid
+    margin-left: 40vw
+    margin-top: 33vw
+
+.slider  
+    display: grid 
+    grid-template-columns: min-content 2% 2% 2% 2% 2% auto min-content
+    column-gap: 1vw
+    
+.dotIndic  
+    margin-top: 0.5vw
+    margin-left: 40%
 .dotIndic:hover
     cursor: pointer
-
 .leftSlider
     cursor: pointer    
 .rightSlider
