--- a/client/public/style/template/rectangle.sass
+++ b/client/public/style/template/rectangle.sass
@@ -3,8 +3,8 @@
   grid-template-columns: 60% 40% 
   max-height: 7%
   width: 100vw
-  //max-width: 65%
-  width: 1000px
+  max-width: 65%
+  //width: 1000px
   background: linear-gradient(-90deg, #304478 43.23%, #152B62 63.54%, #162754 84.9%) 
   filter: drop-shadow(20px 20px 10px rgba(0, 0, 0, 0.5))
 
